# python-github-stats

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  stats.py
.github/: settings.yml
.github/workflows/: default.yml
github_stats/: __init__.py  __main__.py  cli.py
github_stats/actions/: repos.py
github_stats/auth/: user.py
python_github_stats/: __init__.py  __main__.py
python_github_stats/actions/: repos.py  users.py
python_github_stats/auth/: user.py
