[tool.poetry]
name = "python-github-stats"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "^1.54.1"

[tool.poetry.dev-dependencies]
black = {version = "^24.3", allow-prereleases = true}
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
